# KGMS

./: .gitignore  README.md
ake/: .gitignore
ake/backend/: .gitignore  API_README.md  README.md  app.py  config.py  core.py  pyproject.toml  xx.txt
ake/backend/akb/: __init__.py  config.py  const.py
ake/backend/akb/db/: __init__.py  cache_manager.py  meta.py  neo4j_connection.py
ake/backend/akb/services/: __init__.py  graph_service.py  recommendation_service.py  user_service.py
ake/backend/akb/test/: test_graph_service.py
ake/backend/api/: __init__.py  auth.py  authors.py  categories.py  data.py  papers.py  recommendations.py  relationships.py  utils.py
ake/backend/api/test/: test_api.py
ake/backend/test/: test_api.py
ake/frontend/: README.md  app.js  index.html  login.html  pages.html  style.css  test_neo4j.py
ake/frontend/css/: auth.css  recommendations.css  style.css
ake/frontend/js/: app.js  auth.js
ake/frontend/login/: default.css  main.js
ake/frontend/main/: main.html
ake/frontend/main/css/: recommendations.css  style.css
ake/frontend/main/js/: app.js  auth.js  recommendations.js
ake/utils/: README.md  get_data.py  test_api.py
